update api to be more app service specific
